--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "react-spinners": "^0.15.0",
     "sass": "^1.86.0"
   },
   "devDependencies": {
